EE-861: Fixes link color issue * Sets To Do table link back to white on smaller screens * Adds rule to fix Status link in Progress Tracker disappearing * Adds new logos for later use

--- a/drupal/sites/all/modules/custom/recommended_resources/css/recommended_resources.css
+++ b/drupal/sites/all/modules/custom/recommended_resources/css/recommended_resources.css
@@ -6,7 +6,7 @@
 }
 
 .interests-url-hyperlink, .interests-url-text {
-    word-wrap: break-word;
+    word-break: break-word;
     white-space: normal;
 }
 
